flask.log
nohup: ignoring input
Card module imported successfully
 * Serving Flask app 'app'
 * Debug mode: on
INFO:werkzeug:[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://10.0.0.185:5000
INFO:werkzeug:[33mPress CTRL+C to quit[0m
INFO:werkzeug: * Restarting with stat
WARNING:werkzeug: * Debugger is active!
INFO:werkzeug: * Debugger PIN: 894-059-116
INFO:werkzeug:127.0.0.1 - - [11/Feb/2026 16:42:07] "GET / HTTP/1.1" 200 -
INFO:werkzeug:127.0.0.1 - - [11/Feb/2026 16:44:13] "GET / HTTP/1.1" 200 -
INFO:werkzeug:127.0.0.1 - - [11/Feb/2026 16:44:14] "GET /static/images/bg005_7ed376c0.png?v=1770795853 HTTP/1.1" 200 -
INFO:werkzeug:127.0.0.1 - - [11/Feb/2026 16:44:15] "[33mGET /favicon.ico HTTP/1.1[0m" 404 -
INFO:werkzeug:127.0.0.1 - - [11/Feb/2026 16:44:20] "[32mPOST /login HTTP/1.1[0m" 302 -
INFO:werkzeug:127.0.0.1 - - [11/Feb/2026 16:44:29] "[35m[1mGET /index HTTP/1.1[0m" 500 -
Traceback (most recent call last):
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/app.py", line 1498, in __call__
    return self.wsgi_app(environ, start_response)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/app.py", line 1476, in wsgi_app
    response = self.handle_exception(e)
               ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/app.py", line 1473, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/app.py", line 882, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/app.py", line 880, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/app.py", line 865, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/auth.py", line 84, in decorated_function
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/app.py", line 797, in index
    return render_template(
      ^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/templating.py", line 150, in render_template
    return _render(app, template, context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/templating.py", line 131, in _render
    rv = template.render(context)
         ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/jinja2/environment.py", line 1304, in render
    self.environment.handle_exception()
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "templates/index.html", line 1, in top-level template code
    {% extends "base.html" %}
  File "templates/base.html", line 144, in top-level template code
    <a href="{{ url_for('smemo') }}" title="Smemo"><i class="fas fa-sticky-note"></i></a>
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/app.py", line 1084, in url_for
    return self.handle_url_build_error(error, endpoint, values)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/app.py", line 1073, in url_for
    rv = url_adapter.build(  # type: ignore[union-attr]
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/werkzeug/routing/map.py", line 924, in build
    raise BuildError(endpoint, values, method, self)
werkzeug.routing.exceptions.BuildError: Could not build url for endpoint 'smemo'. Did you mean 'memos' instead?
INFO:werkzeug:127.0.0.1 - - [11/Feb/2026 16:44:29] "GET /index?__debugger__=yes&cmd=resource&f=style.css HTTP/1.1" 200 -
INFO:werkzeug:127.0.0.1 - - [11/Feb/2026 16:44:29] "GET /index?__debugger__=yes&cmd=resource&f=debugger.js HTTP/1.1" 200 -
INFO:werkzeug:127.0.0.1 - - [11/Feb/2026 16:44:29] "GET /index?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1" 200 -
INFO:werkzeug:127.0.0.1 - - [11/Feb/2026 16:44:30] "[36mGET /index?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1[0m" 304 -
INFO:werkzeug:45.135.193.11 - - [11/Feb/2026 19:38:40] "[33mGET /.env HTTP/1.1[0m" 404 -
INFO:werkzeug:45.135.193.11 - - [11/Feb/2026 19:38:41] "[33mGET /.env.local HTTP/1.1[0m" 404 -
INFO:werkzeug:45.135.193.11 - - [11/Feb/2026 19:38:42] "[33mGET /.env.staging HTTP/1.1[0m" 404 -
INFO:werkzeug:45.135.193.11 - - [11/Feb/2026 19:38:51] "[33mGET /.env.production HTTP/1.1[0m" 404 -
INFO:werkzeug:127.0.0.1 - - [11/Feb/2026 20:19:25] "[35m[1mGET /index HTTP/1.1[0m" 500 -
Traceback (most recent call last):
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/app.py", line 1498, in __call__
    return self.wsgi_app(environ, start_response)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/app.py", line 1476, in wsgi_app
    response = self.handle_exception(e)
               ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/app.py", line 1473, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/app.py", line 882, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/app.py", line 880, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/app.py", line 865, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/auth.py", line 84, in decorated_function
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/app.py", line 797, in index
    return render_template(
      ^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/templating.py", line 150, in render_template
    return _render(app, template, context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/templating.py", line 131, in _render
    rv = template.render(context)
         ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/jinja2/environment.py", line 1304, in render
    self.environment.handle_exception()
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "templates/index.html", line 1, in top-level template code
    {% extends "base.html" %}
  File "templates/base.html", line 144, in top-level template code
    <a href="{{ url_for('smemo') }}" title="Smemo"><i class="fas fa-sticky-note"></i></a>
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/app.py", line 1084, in url_for
    return self.handle_url_build_error(error, endpoint, values)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/flask/app.py", line 1073, in url_for
    rv = url_adapter.build(  # type: ignore[union-attr]
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/project/venv/lib/python3.12/site-packages/werkzeug/routing/map.py", line 924, in build
    raise BuildError(endpoint, values, method, self)
werkzeug.routing.exceptions.BuildError: Could not build url for endpoint 'smemo'. Did you mean 'memos' instead?
INFO:werkzeug: * Detected change in '/home/ubuntu/project/app.py', reloading
Card module imported successfully
INFO:werkzeug: * Restarting with stat
  File "/home/ubuntu/project/app.py", line 52
    'lims_db': f"sqlite:///{BASE_DIR}/db/lims.db"
             ^
SyntaxError: invalid syntax
